--- a/app/src/main/res/layout/booking_item_card.xml
+++ b/app/src/main/res/layout/booking_item_card.xml
@@ -16,7 +16,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="ECE BUET, Dhaka"
-            android:textSize="26sp"
+            android:textSize="22sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -25,19 +25,17 @@
             android:id="@+id/from_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
             android:text="From: today"
-            android:textSize="22sp"
-            app:layout_constraintStart_toStartOf="@+id/address"
-            app:layout_constraintTop_toBottomOf="@+id/address" />
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="@+id/booking_id"
+            app:layout_constraintTop_toBottomOf="@+id/booking_id" />
 
         <TextView
             android:id="@+id/to_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="To  : tomorrow"
-            android:textSize="22sp"
+            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="@+id/from_time"
             app:layout_constraintTop_toBottomOf="@+id/from_time" />
 
@@ -47,7 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:text="Completed"
-            android:textSize="22sp"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@+id/address"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/address" />
@@ -57,28 +55,53 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Paid"
-            android:textSize="22sp"
-            app:layout_constraintBottom_toTopOf="@+id/to_time"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="@+id/booking_id"
             app:layout_constraintEnd_toEndOf="@+id/booking_status"
-            app:layout_constraintTop_toTopOf="@+id/from_time" />
+            app:layout_constraintTop_toTopOf="@+id/booking_id" />
 
         <TextView
             android:id="@+id/total_fare"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:text="107.00"
             android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="@+id/to_time"
+            app:layout_constraintBottom_toBottomOf="@+id/from_time"
+            app:layout_constraintEnd_toStartOf="@+id/imageView"
+            app:layout_constraintTop_toTopOf="@+id/from_time"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/profile"
+            app:layout_constraintBottom_toBottomOf="@+id/total_fare"
             app:layout_constraintEnd_toEndOf="@+id/payment_status"
-            app:layout_constraintTop_toTopOf="@+id/to_time" />
+            app:layout_constraintTop_toTopOf="@+id/total_fare"
+            app:layout_constraintVertical_bias="0.0" />
 
         <Button
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:text="Pay"
-            app:layout_constraintEnd_toEndOf="@+id/total_fare"
+            app:layout_constraintEnd_toEndOf="@+id/imageView"
             app:layout_constraintTop_toBottomOf="@+id/total_fare" />
+
+        <TextView
+            android:id="@+id/booking_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="Booking ID: #123"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/address"
+            app:layout_constraintTop_toBottomOf="@+id/address" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </com.google.android.material.card.MaterialCardView>
