--- a/app/src/main/res/layout/activity_booking_slot.xml
+++ b/app/src/main/res/layout/activity_booking_slot.xml
@@ -65,12 +65,41 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Requested"
-                android:textSize="18sp"
+                android:textSize="17sp"
+                android:textStyle="bold"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="right">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Payment Status"
+                android:layout_marginBottom="4sp"
+                android:textStyle="italic"/>
+            <TextView
+                android:id="@+id/payment_slot_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="unpaid"
+                android:textSize="17sp"
                 android:textStyle="bold"/>
 
         </LinearLayout>
 
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginTop="12sp"
+        android:background="@android:color/darker_gray"/>
 
     <!-- Parking Space Information -->
     <TextView
@@ -94,7 +123,6 @@
             android:layout_height="wrap_content"
             android:hint="Address"
             android:enabled="false"
-            android:focusable="false"
             android:clickable="false"/>
         <EditText
             android:id="@+id/booking_slot_owner"
@@ -102,7 +130,6 @@
             android:layout_height="wrap_content"
             android:hint="Owner"
             android:enabled="false"
-            android:focusable="false"
             android:clickable="false"/>
     </LinearLayout>
 
@@ -217,7 +244,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginTop="16sp">
 
         <Button
             android:id="@+id/booking_slot_cancel_button"
@@ -227,8 +255,9 @@
             android:text="Cancel Booking"
             android:clickable="true"
             android:focusable="true"
-            android:layout_margin="10sp"
-            android:textSize="15sp"
+            android:backgroundTint="@color/teal_700"
+            android:layout_margin="6sp"
+            android:textSize="14sp"
             android:enabled="true"/>
 
         <Button
@@ -237,11 +266,12 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Pay"
-            android:layout_margin="10sp"
+            android:layout_margin="6sp"
+            android:backgroundTint="@color/quantum_pink700"
             android:textSize="15sp"
             android:clickable="false"
             android:focusable="false"
-            android:enabled="false"/>
+            android:enabled="false" />
 
     </LinearLayout>
 
